--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: arf3DS4
 Type: Package
 Title: Activated Region Fitting, fMRI data analysis (3D).
-Version: 2.5-4
-Date: 2011-10-28
+Version: 2.5-10
+Date: 2014-02-22
 Author: Wouter D. Weeda
 Maintainer: Wouter D. Weeda <w.d.weeda@gmail.com>
-Depends: R (>= 2.12.0), methods, graphics, tcltk
+Depends: R (>= 2.15.0), methods, graphics, tcltk, corpcor
 Description: Activated Region Fitting (ARF) is an analysis method for fMRI data. 
 URL: http://arf.r-forge.r-project.org/
 License: GPL-2
 LazyLoad: yes
-Packaged: 2011-10-28 10:13:51 UTC; wdweeda
+Packaged: 2014-02-21 10:02:57 UTC; wwa240
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2011-11-02 17:25:21
+Date/Publication: 2014-02-21 11:29:26
